[package]
name = "mc-ping"
version = "0.1.0"
authors = ["Aurora <tomek-kubel2@wp.pl>"]
edition = "2018"

[dependencies]
structopt = "0.2.15"
serde = { version = "1.0.91", features = ["derive"] }
serde_json = "1.0.39"
# romio = "0.3.0-alpha.8"
# juliex = "0.3.0-alpha.6"
# futures-preview = "0.3.0-alpha.16"
rayon = "1.0.3"
humanize-rs = "0.1.5"
